// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template App Snapshot tests Initial App screen 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "color": "white",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/background.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 6,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "height": 600,
          "justifyContent": "space-around",
        }
      }
    >
      <View
        style={
          Object {
            "marginLeft": 200,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 80,
              "marginBottom": 10,
            }
          }
        >
          Hello World!
        </Text>
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 40,
            }
          }
        >
          Select one of the options below to start your Kepler journey 🚀
        </Text>
      </View>
      <View
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderBottomColor": "transparent",
            "borderBottomWidth": 5,
            "opacity": 1,
            "paddingBottom": 10,
            "width": 420,
          }
        }
        testID="sampleLink"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginLeft": 200,
              "width": 300,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/assets/star.png",
              }
            }
          />
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 45,
                "marginLeft": 30,
              }
            }
          >
            Learn
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderBottomColor": "transparent",
            "borderBottomWidth": 5,
            "opacity": 1,
            "paddingBottom": 10,
            "width": 420,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginLeft": 200,
              "width": 300,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/assets/star.png",
              }
            }
          />
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 45,
                "marginLeft": 30,
              }
            }
          >
            Build
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderBottomColor": "transparent",
            "borderBottomWidth": 5,
            "opacity": 1,
            "paddingBottom": 10,
            "width": 420,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginLeft": 200,
              "width": 300,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/assets/star.png",
              }
            }
          />
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 45,
                "marginLeft": 30,
              }
            }
          >
            Support
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "paddingLeft": 150,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/assets/kepler.png",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
        "marginLeft": 190,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 40,
        }
      }
    >
      💡 Edit App.tsx to change this screen and then come back to see your edits
    </Text>
  </View>
</View>
`;

exports[`Template App Snapshot tests App screen after link press 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "color": "white",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/background.png",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 6,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "height": 600,
          "justifyContent": "space-around",
        }
      }
    >
      <View
        style={
          Object {
            "marginLeft": 200,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 80,
              "marginBottom": 10,
            }
          }
        >
          Hello World!
        </Text>
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 40,
            }
          }
        >
          Select one of the options below to start your Kepler journey 🚀
        </Text>
      </View>
      <View
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderBottomColor": "transparent",
            "borderBottomWidth": 5,
            "opacity": 1,
            "paddingBottom": 10,
            "width": 420,
          }
        }
        testID="sampleLink"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginLeft": 200,
              "width": 300,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/assets/star.png",
              }
            }
          />
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 45,
                "marginLeft": 30,
              }
            }
          >
            Learn
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderBottomColor": "transparent",
            "borderBottomWidth": 5,
            "opacity": 1,
            "paddingBottom": 10,
            "width": 420,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginLeft": 200,
              "width": 300,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/assets/star.png",
              }
            }
          />
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 45,
                "marginLeft": 30,
              }
            }
          >
            Build
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          Object {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderBottomColor": "transparent",
            "borderBottomWidth": 5,
            "opacity": 1,
            "paddingBottom": 10,
            "width": 420,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginLeft": 200,
              "width": 300,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/assets/star.png",
              }
            }
          />
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 45,
                "marginLeft": 30,
              }
            }
          >
            Support
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "paddingLeft": 150,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/assets/learn.png",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "center",
        "marginLeft": 190,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 40,
        }
      }
    >
      💡 Edit App.tsx to change this screen and then come back to see your edits
    </Text>
  </View>
</View>
`;
